--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.2",
+    "@headlessui/react": "^2.1.5",
+    "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^5.19.1",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.4.0",
+    "@supabase/supabase-js": "^2.45.3",
+    "@uiw/react-codemirror": "^4.23.1",
+    "mustache": "^4.2.0",
+    "next": "14.2.7",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
+    "react-to-print": "^2.15.1",
+    "stripe": "^16.11.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/mustache": "^4.2.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "prisma": "^5.19.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
